// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Entry/MLForm Basic 1`] = `
<form
  class="ant-form ant-form-horizontal ml-form"
>
  <div
    class="ant-row ant-form-item ant-form-item-with-help ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-5"
    >
      <label
        class=""
        title="Label text"
      >
        Label text
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-12"
    >
      <div
        class="ant-form-item-control has-success"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <input
              class="ant-input ant-input-sm"
              id="error"
              placeholder=""
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            />
          </span>
        </span>
        <div
          class="ant-form-explain"
        >
          Help text
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Data Entry/MLForm Horizontal Login Form 1`] = `
<form
  class="ant-form ant-form-inline ml-form"
>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <span
              class="ant-input-prefix"
            >
              <span
                aria-label="user"
                class="anticon anticon-user ml-icon ml-icon-outlined"
                role="img"
                style="color:rgba(0,0,0,.25)"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="user"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                  />
                </svg>
              </span>
            </span>
            <input
              class="ant-input ant-input-sm"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="horizontal_login_username"
              placeholder="Username"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <span
              class="ant-input-prefix"
            >
              <span
                aria-label="lock"
                class="anticon anticon-lock ml-icon ml-icon-outlined"
                role="img"
                style="color:rgba(0,0,0,.25)"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="lock"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                  />
                </svg>
              </span>
            </span>
            <input
              class="ant-input ant-input-sm"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="horizontal_login_password"
              placeholder="MLPassword"
              type="password"
              value=""
            />
            <span
              class="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <button
            class="ant-btn ml-btn ant-btn-primary ant-btn-sm"
            type="submit"
          >
            <span>
              Log in
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Data Entry/MLForm Normal Login Form 1`] = `
<div
  id="components-form-demo-normal-login"
>
  <form
    class="ant-form ant-form-horizontal ml-form login-form"
  >
    <div
      class="ant-row ant-form-item ml-form-item"
    >
      <div
        class="ant-col ant-form-item-control-wrapper"
      >
        <div
          class="ant-form-item-control"
        >
          <span
            class="ant-form-item-children"
          >
            <span
              class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
            >
              <span
                class="ant-input-prefix"
              >
                <span
                  aria-label="user"
                  class="anticon anticon-user ml-icon ml-icon-outlined"
                  role="img"
                  style="color:rgba(0,0,0,.25)"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="user"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                    />
                  </svg>
                </span>
              </span>
              <input
                class="ant-input ant-input-sm"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="normal_login_username"
                placeholder="Username"
                type="text"
                value=""
              />
              <span
                class="ant-input-suffix"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ml-form-item"
    >
      <div
        class="ant-col ant-form-item-control-wrapper"
      >
        <div
          class="ant-form-item-control"
        >
          <span
            class="ant-form-item-children"
          >
            <span
              class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
            >
              <span
                class="ant-input-prefix"
              >
                <span
                  aria-label="lock"
                  class="anticon anticon-lock ml-icon ml-icon-outlined"
                  role="img"
                  style="color:rgba(0,0,0,.25)"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="lock"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                    />
                  </svg>
                </span>
              </span>
              <input
                class="ant-input ant-input-sm"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="normal_login_password"
                placeholder="MLPassword"
                type="password"
                value=""
              />
              <span
                class="ant-input-suffix"
              />
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-row ant-form-item ml-form-item"
    >
      <div
        class="ant-col ant-form-item-control-wrapper"
      >
        <div
          class="ant-form-item-control has-success"
        >
          <span
            class="ant-form-item-children"
          >
            <label
              class="ml-checkbox ant-checkbox-wrapper ant-checkbox-wrapper-checked"
            >
              <span
                class="ant-checkbox ant-checkbox-checked"
              >
                <input
                  checked=""
                  class="ant-checkbox-input"
                  data-__field="[object Object]"
                  data-__meta="[object Object]"
                  id="normal_login_remember"
                  type="checkbox"
                />
                <span
                  class="ant-checkbox-inner"
                />
              </span>
              <span>
                Remember me
              </span>
            </label>
            <a
              class="login-form-forgot"
              href=""
            >
              Forgot password
            </a>
            <button
              class="ant-btn ml-btn login-form-button ant-btn-primary ant-btn-sm"
              type="submit"
            >
              <span>
                Log in
              </span>
            </button>
            Or 
            <a
              href=""
            >
              register now!
            </a>
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Storyshots Data Entry/MLForm Other Form Controls 1`] = `
<form
  class="ant-form ant-form-horizontal ml-form"
>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        title="Plain Text"
      >
        Plain Text
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ant-form-text"
          >
            China
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class="ant-form-item-required"
        for="validate_other_select"
        title="Select"
      >
        Select
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-select-sm ant-select-show-arrow ml-select ant-select ant-select-enabled"
            id="validate_other_select"
          >
            <div
              aria-autocomplete="list"
              aria-controls=""
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--single"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              role="combobox"
              tabindex="0"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <div
                  class="ant-select-selection__placeholder"
                  style="display:block;user-select:none;-webkit-user-select:none"
                  unselectable="on"
                >
                  Please select a country
                </div>
              </div>
              <span
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <i
                  aria-label="icon: down"
                  class="anticon anticon-down ant-select-arrow-icon"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </i>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class="ant-form-item-required"
        for="validate_other_select-multiple"
        title="Select[multiple]"
      >
        Select[multiple]
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-select-sm ant-select-show-arrow ml-select ant-select ant-select-enabled ant-select-allow-clear"
            id="validate_other_select-multiple"
          >
            <div
              aria-autocomplete="list"
              aria-controls=""
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--multiple"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              role="combobox"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <div
                  class="ant-select-selection__placeholder"
                  style="display:block;user-select:none;-webkit-user-select:none"
                  unselectable="on"
                >
                  Please select favourite colors
                </div>
                <ul>
                  <li
                    class="ant-select-search ant-select-search--inline"
                  >
                    <div
                      class="ant-select-search__field__wrap"
                    >
                      <input
                        autocomplete="off"
                        class="ant-select-search__field"
                        id="validate_other_select-multiple"
                        value=""
                      />
                      <span
                        class="ant-select-search__field__mirror"
                      >
                         
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
              <span
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <i
                  aria-label="icon: down"
                  class="anticon anticon-down ant-select-arrow-icon"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </i>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_input-number"
        title="InputNumber"
      >
        InputNumber
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control has-success"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-input-number ml-input-number"
          >
            <div
              class="ant-input-number-handler-wrap"
            >
              <span
                aria-disabled="false"
                aria-label="Increase Value"
                class="ant-input-number-handler ant-input-number-handler-up "
                role="button"
                unselectable="unselectable"
              >
                <i
                  aria-label="icon: up"
                  class="anticon anticon-up ant-input-number-handler-up-inner"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="up"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 0 0 140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                    />
                  </svg>
                </i>
              </span>
              <span
                aria-disabled="false"
                aria-label="Decrease Value"
                class="ant-input-number-handler ant-input-number-handler-down "
                role="button"
                unselectable="unselectable"
              >
                <i
                  aria-label="icon: down"
                  class="anticon anticon-down ant-input-number-handler-down-inner"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </i>
              </span>
            </div>
            <div
              class="ant-input-number-input-wrap"
            >
              <input
                aria-valuemax="10"
                aria-valuemin="1"
                aria-valuenow="3"
                autocomplete="off"
                class="ant-input-number-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="validate_other_input-number"
                max="10"
                min="1"
                role="spinbutton"
                step="1"
                value="3"
              />
            </div>
          </div>
          <span
            class="ant-form-text"
          >
             machines
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_switch"
        title="Switch"
      >
        Switch
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <button
            aria-checked="false"
            class="ml-switch ant-switch-small ant-switch"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="validate_other_switch"
            role="switch"
            type="button"
          >
            <span
              class="ant-switch-inner"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_slider"
        title="Slider"
      >
        Slider
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-slider ant-slider-with-marks ml-slider"
          >
            <div
              class="ant-slider-rail"
            />
            <div
              class="ant-slider-track"
              style="left:0%;right:auto;width:0%"
            />
            <div
              class="ant-slider-step"
            >
              <span
                class="ant-slider-dot ant-slider-dot-active"
                style="left:0%"
              />
              <span
                class="ant-slider-dot"
                style="left:20%"
              />
              <span
                class="ant-slider-dot"
                style="left:40%"
              />
              <span
                class="ant-slider-dot"
                style="left:60%"
              />
              <span
                class="ant-slider-dot"
                style="left:80%"
              />
              <span
                class="ant-slider-dot"
                style="left:100%"
              />
            </div>
            <div
              aria-disabled="false"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="ant-slider-handle"
              role="slider"
              style="left:0%;right:auto;transform:translateX(-50%)"
              tabindex="0"
            />
            <div
              class="ant-slider-mark"
            >
              <span
                class="ant-slider-mark-text ant-slider-mark-text-active"
                style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:0%"
              >
                A
              </span>
              <span
                class="ant-slider-mark-text"
                style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:20%"
              >
                B
              </span>
              <span
                class="ant-slider-mark-text"
                style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:40%"
              >
                C
              </span>
              <span
                class="ant-slider-mark-text"
                style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:60%"
              >
                D
              </span>
              <span
                class="ant-slider-mark-text"
                style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:80%"
              >
                E
              </span>
              <span
                class="ant-slider-mark-text"
                style="transform:translateX(-50%);-ms-transform:translateX(-50%);left:100%"
              >
                F
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_radio-group"
        title="MLRadio.MLGroup"
      >
        MLRadio.MLGroup
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-radio-group ant-radio-group-outline ant-radio-group-small ml-radio-group"
            id="validate_other_radio-group"
          >
            <label
              class="ml-radio ant-radio-wrapper"
            >
              <span
                class="ant-radio"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                  value="a"
                />
                <span
                  class="ant-radio-inner"
                />
              </span>
              <span>
                item 1
              </span>
            </label>
            <label
              class="ml-radio ant-radio-wrapper"
            >
              <span
                class="ant-radio"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                  value="b"
                />
                <span
                  class="ant-radio-inner"
                />
              </span>
              <span>
                item 2
              </span>
            </label>
            <label
              class="ml-radio ant-radio-wrapper"
            >
              <span
                class="ant-radio"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                  value="c"
                />
                <span
                  class="ant-radio-inner"
                />
              </span>
              <span>
                item 3
              </span>
            </label>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_radio-button"
        title="MLRadio.MLButton"
      >
        MLRadio.MLButton
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-radio-group ant-radio-group-outline ant-radio-group-small ml-radio-group"
            id="validate_other_radio-button"
          >
            <label
              class="ml-radio-button ant-radio-button-wrapper"
            >
              <span
                class="ant-radio-button"
              >
                <input
                  class="ant-radio-button-input"
                  type="radio"
                  value="a"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                item 1
              </span>
            </label>
            <label
              class="ml-radio-button ant-radio-button-wrapper"
            >
              <span
                class="ant-radio-button"
              >
                <input
                  class="ant-radio-button-input"
                  type="radio"
                  value="b"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                item 2
              </span>
            </label>
            <label
              class="ml-radio-button ant-radio-button-wrapper"
            >
              <span
                class="ant-radio-button"
              >
                <input
                  class="ant-radio-button-input"
                  type="radio"
                  value="c"
                />
                <span
                  class="ant-radio-button-inner"
                />
              </span>
              <span>
                item 3
              </span>
            </label>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_checkbox-group"
        title="MLCheckbox.MLGroup"
      >
        MLCheckbox.MLGroup
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control has-success"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-checkbox-group ml-checkbox-group"
            data-__field="[object Object]"
            data-__meta="[object Object]"
            id="validate_other_checkbox-group"
            style="width:100%"
          >
            <div
              class="ant-row ml-row"
            >
              <div
                class="ant-col ant-col-8 ml-col"
              >
                <label
                  class="ml-checkbox ant-checkbox-wrapper ant-checkbox-wrapper-checked"
                >
                  <span
                    class="ant-checkbox ant-checkbox-checked"
                  >
                    <input
                      checked=""
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="A"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    A
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-col-8 ml-col"
              >
                <label
                  class="ml-checkbox ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-disabled"
                >
                  <span
                    class="ant-checkbox ant-checkbox-checked ant-checkbox-disabled"
                  >
                    <input
                      checked=""
                      class="ant-checkbox-input"
                      disabled=""
                      type="checkbox"
                      value="B"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    B
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-col-8 ml-col"
              >
                <label
                  class="ml-checkbox ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="C"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    C
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-col-8 ml-col"
              >
                <label
                  class="ml-checkbox ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="D"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    D
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-col-8 ml-col"
              >
                <label
                  class="ml-checkbox ant-checkbox-wrapper"
                >
                  <span
                    class="ant-checkbox"
                  >
                    <input
                      class="ant-checkbox-input"
                      type="checkbox"
                      value="E"
                    />
                    <span
                      class="ant-checkbox-inner"
                    />
                  </span>
                  <span>
                    E
                  </span>
                </label>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_rate"
        title="MLRate"
      >
        MLRate
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control has-success"
      >
        <span
          class="ant-form-item-children"
        >
          <ul
            class="ant-rate ml-rate"
            role="radiogroup"
            tabindex="0"
          >
            <li
              class="ant-rate-star ant-rate-star-full"
            >
              <div
                aria-checked="true"
                aria-posinset="1"
                aria-setsize="5"
                role="radio"
                tabindex="0"
              >
                <div
                  class="ant-rate-star-first"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
                <div
                  class="ant-rate-star-second"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </li>
            <li
              class="ant-rate-star ant-rate-star-full"
            >
              <div
                aria-checked="true"
                aria-posinset="2"
                aria-setsize="5"
                role="radio"
                tabindex="0"
              >
                <div
                  class="ant-rate-star-first"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
                <div
                  class="ant-rate-star-second"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </li>
            <li
              class="ant-rate-star ant-rate-star-full"
            >
              <div
                aria-checked="true"
                aria-posinset="3"
                aria-setsize="5"
                role="radio"
                tabindex="0"
              >
                <div
                  class="ant-rate-star-first"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
                <div
                  class="ant-rate-star-second"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </li>
            <li
              class="ant-rate-star ant-rate-star-zero"
            >
              <div
                aria-checked="true"
                aria-posinset="4"
                aria-setsize="5"
                role="radio"
                tabindex="0"
              >
                <div
                  class="ant-rate-star-first"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
                <div
                  class="ant-rate-star-second"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </li>
            <li
              class="ant-rate-star ant-rate-star-zero"
            >
              <div
                aria-checked="false"
                aria-posinset="5"
                aria-setsize="5"
                role="radio"
                tabindex="0"
              >
                <div
                  class="ant-rate-star-first"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
                <div
                  class="ant-rate-star-second"
                >
                  <i
                    aria-label="icon: star"
                    class="anticon anticon-star"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </li>
          </ul>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_upload"
        title="MLUpload"
      >
        MLUpload
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-upload"
          >
            <div
              class="ant-upload ant-upload-select ant-upload-select-picture"
            />
            <div
              class="ant-upload-list ant-upload-list-picture"
            />
          </span>
        </span>
        <div
          class="ant-form-extra"
        >
          longgggggggggggggggggggggggggggggggggg
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="validate_other_dragger"
        title="Dragger"
      >
        Dragger
      </label>
    </div>
    <div
      class="ant-col ant-col-14 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span>
            <div
              class="ant-upload ant-upload-drag ml-upload-dragger"
            />
            <div
              class="ant-upload-list ant-upload-list-text"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-col-12 ant-col-offset-6 ant-form-item-control-wrapper"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <button
            class="ant-btn ml-btn ant-btn-primary ant-btn-sm"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Data Entry/MLForm Registration 1`] = `
<form
  class="ant-form ant-form-horizontal ml-form"
>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_email"
        title="E-mail"
      >
        E-mail
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <input
              class="ant-input ant-input-sm"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="register_email"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_password"
        title="MLPassword"
      >
        MLPassword
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ant-input-password ml-input-password ant-input-password-small ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <input
              action="click"
              class="ant-input ant-input-sm"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="register_password"
              type="password"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <i
                aria-label="icon: eye-invisible"
                class="anticon anticon-eye-invisible ant-input-password-icon"
                tabindex="-1"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="eye-invisible"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 0 0 0-51.5zm-63.57-320.64L836 122.88a8 8 0 0 0-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 0 0 0 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 0 0 0 11.31L155.17 889a8 8 0 0 0 11.31 0l712.15-712.12a8 8 0 0 0 0-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 0 0-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 0 1 146.2-106.69L401.31 546.2A112 112 0 0 1 396 512z"
                  />
                  <path
                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 0 0 227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 0 1-112 112z"
                  />
                </svg>
              </i>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_confirm"
        title="Confirm MLPassword"
      >
        Confirm MLPassword
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ant-input-password ml-input-password ant-input-password-small ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <input
              action="click"
              class="ant-input ant-input-sm"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="register_confirm"
              type="password"
              value=""
            />
            <span
              class="ant-input-suffix"
            >
              <i
                aria-label="icon: eye-invisible"
                class="anticon anticon-eye-invisible ant-input-password-icon"
                tabindex="-1"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="eye-invisible"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 0 0 0-51.5zm-63.57-320.64L836 122.88a8 8 0 0 0-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 0 0 0 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 0 0 0 11.31L155.17 889a8 8 0 0 0 11.31 0l712.15-712.12a8 8 0 0 0 0-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 0 0-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 0 1 146.2-106.69L401.31 546.2A112 112 0 0 1 396 512z"
                  />
                  <path
                    d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 0 0 227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 0 1-112 112z"
                  />
                </svg>
              </i>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_nickname"
        title=""
      >
        <span>
          Nickname 
          <span
            aria-label="question-circle"
            class="anticon anticon-question-circle ml-tooltip-container ml-icon ml-icon-outlined"
            role="img"
            style="color:black"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="question-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
              />
              <path
                d="M623.6 316.7C593.6 290.4 554 276 512 276s-81.6 14.5-111.6 40.7C369.2 344 352 380.7 352 420v7.6c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V420c0-44.1 43.1-80 96-80s96 35.9 96 80c0 31.1-22 59.6-56.1 72.7-21.2 8.1-39.2 22.3-52.1 40.9-13.1 19-19.9 41.8-19.9 64.9V620c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8v-22.7a48.3 48.3 0 0130.9-44.8c59-22.7 97.1-74.7 97.1-132.5.1-39.3-17.1-76-48.3-103.3zM472 732a40 40 0 1080 0 40 40 0 10-80 0z"
              />
            </svg>
          </span>
        </span>
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
          >
            <input
              class="ant-input ant-input-sm"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="register_nickname"
              type="text"
              value=""
            />
            <span
              class="ant-input-suffix"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_residence"
        title="Habitual Residence"
      >
        Habitual Residence
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control has-success"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ant-cascader-picker"
            tabindex="0"
          >
            <span
              class="ant-cascader-picker-label"
            >
              Zhejiang / Hangzhou / West Lake
            </span>
            <input
              autocomplete="off"
              class="ant-input ant-cascader-input "
              data-__field="[object Object]"
              data-__meta="[object Object]"
              id="register_residence"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
            <i
              aria-label="icon: close-circle"
              class="anticon anticon-close-circle ant-cascader-picker-clear"
              tabindex="-1"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="close-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 0 1-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                />
              </svg>
            </i>
            <i
              aria-label="icon: down"
              class="anticon anticon-down ant-cascader-picker-arrow"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="down"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                />
              </svg>
            </i>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_phone"
        title="Phone Number"
      >
        Phone Number
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-input ant-input-group-wrapper ant-input-group-wrapper-sm"
            style="width:100%"
          >
            <span
              class="ant-input-wrapper ant-input-group"
            >
              <span
                class="ant-input-group-addon"
              >
                <div
                  class="ant-select-sm ant-select-show-arrow ml-select ant-select ant-select-enabled"
                  id="register_prefix"
                  style="width:70px"
                >
                  <div
                    aria-autocomplete="list"
                    aria-controls=""
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-select-selection
            ant-select-selection--single"
                    data-__field="[object Object]"
                    data-__meta="[object Object]"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="ant-select-selection__rendered"
                    >
                      <div
                        class="ant-select-selection-selected-value"
                        style="display:block;opacity:1"
                        title="+86"
                      >
                        +86
                      </div>
                    </div>
                    <span
                      class="ant-select-arrow"
                      style="user-select:none;-webkit-user-select:none"
                      unselectable="on"
                    >
                      <i
                        aria-label="icon: down"
                        class="anticon anticon-down ant-select-arrow-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </i>
                    </span>
                  </div>
                </div>
              </span>
              <span
                class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
              >
                <input
                  class="ant-input ant-input-sm"
                  data-__field="[object Object]"
                  data-__meta="[object Object]"
                  id="register_phone"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                />
              </span>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        for="register_website"
        title="Website"
      >
        Website
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ml-auto-complete ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
            id="register_website"
          >
            <div
              aria-autocomplete="list"
              aria-controls=""
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-select-selection
            ant-select-selection--single"
              data-__field="[object Object]"
              data-__meta="[object Object]"
              role="combobox"
            >
              <div
                class="ant-select-selection__rendered"
              >
                <div
                  class="ant-select-selection__placeholder"
                  style="display:block;user-select:none;-webkit-user-select:none"
                  unselectable="on"
                >
                  website
                </div>
                <ul>
                  <li
                    class="ant-select-search ant-select-search--inline"
                  >
                    <div
                      class="ant-select-search__field__wrap"
                    >
                      <span
                        class="ml-input ant-select-search__field ant-input-affix-wrapper ant-input-affix-wrapper-sm"
                      >
                        <input
                          class="ant-input ant-input-sm"
                          type="text"
                          value=""
                        />
                        <span
                          class="ant-input-suffix"
                        />
                      </span>
                      <span
                        class="ant-select-search__field__mirror"
                      >
                         
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
              <span
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <i
                  aria-label="icon: down"
                  class="anticon anticon-down ant-select-arrow-icon"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </i>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="register_captcha"
        title="Captcha"
      >
        Captcha
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <div
            class="ant-row ml-row"
            style="margin-left:-4px;margin-right:-4px"
          >
            <div
              class="ant-col ant-col-12 ml-col"
              style="padding-left:4px;padding-right:4px"
            >
              <span
                class="ml-input ant-input-affix-wrapper ant-input-affix-wrapper-sm"
              >
                <input
                  class="ant-input ant-input-sm"
                  data-__field="[object Object]"
                  data-__meta="[object Object]"
                  id="register_captcha"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                />
              </span>
            </div>
            <div
              class="ant-col ant-col-12 ml-col"
              style="padding-left:4px;padding-right:4px"
            >
              <button
                class="ant-btn ml-btn ant-btn-sm"
                type="button"
              >
                <span>
                  Get captcha
                </span>
              </button>
            </div>
          </div>
        </span>
        <div
          class="ant-form-extra"
        >
          We must make sure that your are a human.
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-xs-offset-0 ant-col-sm-16 ant-col-sm-offset-8"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <label
            class="ml-checkbox ant-checkbox-wrapper"
          >
            <span
              class="ant-checkbox"
            >
              <input
                class="ant-checkbox-input"
                data-__field="[object Object]"
                data-__meta="[object Object]"
                id="register_agreement"
                type="checkbox"
              />
              <span
                class="ant-checkbox-inner"
              />
            </span>
            <span>
              I have read the 
              <a
                href=""
              >
                agreement
              </a>
            </span>
          </label>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-xs-offset-0 ant-col-sm-16 ant-col-sm-offset-8"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <button
            class="ant-btn ml-btn ant-btn-primary ant-btn-sm"
            type="submit"
          >
            <span>
              Register
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots Data Entry/MLForm Time Related Form 1`] = `
<form
  class="ant-form ant-form-horizontal ml-form"
>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="time_related_controls_date-picker"
        title="MLDatePicker"
      >
        MLDatePicker
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-date-picker ml-date-picker-1 ant-calendar-picker ant-calendar-picker-small"
            id="time_related_controls_date-picker"
          >
            <div>
              <input
                class="ant-calendar-picker-input ant-input ant-input-sm"
                placeholder="Select date"
                readonly=""
                value=""
              />
              <i
                aria-label="icon: calendar"
                class="anticon anticon-calendar ant-calendar-picker-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </i>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="time_related_controls_date-time-picker"
        title="MLDatePicker[showTime]"
      >
        MLDatePicker[showTime]
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-date-picker ml-date-picker-2 ant-calendar-picker ant-calendar-picker-small"
            id="time_related_controls_date-time-picker"
            style="min-width:195px"
          >
            <div>
              <input
                class="ant-calendar-picker-input ant-input ant-input-sm"
                placeholder="Select date"
                readonly=""
                value=""
              />
              <i
                aria-label="icon: calendar"
                class="anticon anticon-calendar ant-calendar-picker-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </i>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="time_related_controls_month-picker"
        title="MLMonthPicker"
      >
        MLMonthPicker
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-date-picker-month-picker ant-calendar-picker ant-calendar-picker-small"
            id="time_related_controls_month-picker"
          >
            <div>
              <input
                class="ant-calendar-picker-input ant-input ant-input-sm"
                placeholder="Select date"
                readonly=""
                value=""
              />
              <i
                aria-label="icon: calendar"
                class="anticon anticon-calendar ant-calendar-picker-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </i>
            </div>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="time_related_controls_range-picker"
        title="MLRangePicker"
      >
        MLRangePicker
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-date-picker-range-picker ml-date-picker-range-picker-3 ant-calendar-picker ant-calendar-picker-small"
            id="time_related_controls_range-picker"
            tabindex="0"
          >
            <span
              class="ant-calendar-picker-input ant-input ant-input-sm"
            >
              <input
                class="ant-calendar-range-picker-input"
                placeholder="Start"
                readonly=""
                tabindex="-1"
                value=""
              />
              <span
                class="ant-calendar-range-picker-separator"
              >
                 
                <span
                  class="ant-picker-separator"
                >
                  –
                </span>
                 
              </span>
              <input
                class="ant-calendar-range-picker-input"
                placeholder="End"
                readonly=""
                tabindex="-1"
                value=""
              />
              <i
                aria-label="icon: calendar"
                class="anticon anticon-calendar ant-calendar-picker-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </i>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="time_related_controls_range-time-picker"
        title="MLRangePicker[showTime]"
      >
        MLRangePicker[showTime]
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ml-date-picker-range-picker ml-date-picker-range-picker-4 ant-calendar-picker ant-calendar-picker-small"
            id="time_related_controls_range-time-picker"
            style="width:350px"
            tabindex="0"
          >
            <span
              class="ant-calendar-picker-input ant-input ant-input-sm"
            >
              <input
                class="ant-calendar-range-picker-input"
                placeholder="Start"
                readonly=""
                tabindex="-1"
                value=""
              />
              <span
                class="ant-calendar-range-picker-separator"
              >
                 
                <span
                  class="ant-picker-separator"
                >
                  –
                </span>
                 
              </span>
              <input
                class="ant-calendar-range-picker-input"
                placeholder="End"
                readonly=""
                tabindex="-1"
                value=""
              />
              <i
                aria-label="icon: calendar"
                class="anticon anticon-calendar ant-calendar-picker-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="calendar"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                  />
                </svg>
              </i>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class="ant-form-item-required"
        for="time_related_controls_time-picker"
        title="MLTimePicker"
      >
        MLTimePicker
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <span
            class="ant-time-picker"
          >
            <input
              class="ant-time-picker-input"
              id="time_related_controls_time-picker"
              placeholder="Select time"
              type="text"
              value=""
            />
            <span
              class="ant-time-picker-icon"
            >
              <i
                aria-label="icon: clock-circle"
                class="anticon anticon-clock-circle ant-time-picker-clock-icon"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="clock-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                  />
                </svg>
              </i>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item ml-form-item"
  >
    <div
      class="ant-col ant-form-item-control-wrapper ant-col-xs-24 ant-col-xs-offset-0 ant-col-sm-16 ant-col-sm-offset-8"
    >
      <div
        class="ant-form-item-control"
      >
        <span
          class="ant-form-item-children"
        >
          <button
            class="ant-btn ml-btn ant-btn-primary ant-btn-sm"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</form>
`;
